 bug: correctly emulate dma to/from tcm
 enh: add guitar grip emulation
 enh: add more powerful antigrain-based drawing library and rewrite OSD system
 enh: ideas-style debugging prints

Graphics:
 bug: fixing of obj blending, bmp obj rendering, and some obj window cases
 bug: fix backdrop blending with garbage
 bug: fix 256B granularity sprite addressing for sub gpu
 bug: fix 128-wide captures
 bug: swrast: add clear image emulation
  
Windows:
 bug: improve map view tool to support more modes
 enh: added 2x resizing filters (hq2x, 2xsai, supereagle, scanlines)
 enh: soundview can now mute channels
 enh: multicore optimization for filters, rotation, OSD

Linux:
 enh: alsa microphone support

0.9.2 -> 0.9.4 (r1844->r2352->r2437)

0.9.3 was skipped due to emu news sites sneaking it out of our staging area and 
releasing it prematurely while it still had bugs. I was going to curse them 
individually, but then I decided that they would just like the publicity.

Highlights:
 * New save autodetection and save file format
 * Full rerecording support
 
General/Core:
 bug: fix many 64 bit and endian issues
 bug: fix mic input, which was nearly useless before
 bug: fix failures of large dmas
 bug: fix in ipc sync which broke devkitpro touch
 bug: screenshots now exclude hud and rotation
 bug: rewritten vram mapping (fixes corrupted or missing BG)
 enh: add universal commandline system (same commandline options on every port)
 enh: cheats: added Action Replay code parser
 enh: more reliable and useful frameskipping
 enh: SPU: speedup: add adpcm caching
 enh: SPU: speedup: interpolation is now optional
 enh: print svn build number so we can identify people's svn builds from screenshots

Graphics:
 bug: add polygon y-sorting (fixes 3d guis)
 bug: fix texcoordgen mode 3; fixes some ortho sprites and some entirely broken games
 bug: display capture fixes
 bug: fix a number of OBJ modes
 bug: fixes to affine BG modes
 bug: better emulate some translucent OBJ